--- a/src/main/resources/configs/config.properties
+++ b/src/main/resources/configs/config.properties
@@ -1,3 +1,5 @@
-device.name=
-platform.version=
-bundle.id=
+platformName=iOS
+device.name=iPhone 15
+
+platform.version=17.4
+bundle.id=04BA510A-E3FD-4676-9B5D-339E3698E734
