--- a/src/main/resources/configs/config.properties
+++ b/src/main/resources/configs/config.properties
@@ -1,5 +1,6 @@
 platformName=iOS
 device.name=iPhone 15
-
-platform.version=17.4
-bundle.id=04BA510A-E3FD-4676-9B5D-339E3698E734
+device.platform.version=17.4
+automation.name=XCUITest
+bundle.id=com.apple.mobilecal
+device.udid=8BBEECDB-EB8A-42F1-9F0A-F21D414A3566
